 2014-11-17 22:32  hvlad 
   A builds/win32/msvc12
   A builds/win32/msvc12/DllNoEmbedManifest.props
   A builds/win32/msvc12/Firebird3.sln
   A builds/win32/msvc12/Firebird3Boot.sln
   A builds/win32/msvc12/Firebird3_Examples.sln
   A builds/win32/msvc12/alice.vcxproj
   A builds/win32/msvc12/alice.vcxproj.filters
   A builds/win32/msvc12/btyacc.vcxproj
   A builds/win32/msvc12/btyacc.vcxproj.filters
   A builds/win32/msvc12/build_msg.vcxproj
   A builds/win32/msvc12/build_msg.vcxproj.filters
   A builds/win32/msvc12/burp.vcxproj
   A builds/win32/msvc12/burp.vcxproj.filters
   A builds/win32/msvc12/codes.vcxproj
   A builds/win32/msvc12/codes.vcxproj.filters
   A builds/win32/msvc12/common.vcxproj
   A builds/win32/msvc12/common.vcxproj.filters
   A builds/win32/msvc12/empbuild.vcxproj
   A builds/win32/msvc12/empbuild.vcxproj.filters
   A builds/win32/msvc12/engine.vcxproj
   A builds/win32/msvc12/engine.vcxproj.filters
   A builds/win32/msvc12/fb2control.vcxproj
   A builds/win32/msvc12/fb2control.vcxproj.filters
   A builds/win32/msvc12/fb_lock_print.vcxproj
   A builds/win32/msvc12/fb_lock_print.vcxproj.filters
   A builds/win32/msvc12/fbguard.vcxproj
   A builds/win32/msvc12/fbguard.vcxproj.filters
   A builds/win32/msvc12/fbrmclib.vcxproj
   A builds/win32/msvc12/fbrmclib.vcxproj.filters
   A builds/win32/msvc12/fbserver.vcxproj
   A builds/win32/msvc12/fbserver.vcxproj.filters
   A builds/win32/msvc12/fbsvcmgr.vcxproj
   A builds/win32/msvc12/fbsvcmgr.vcxproj.filters
   A builds/win32/msvc12/fbtrace.vcxproj
   A builds/win32/msvc12/fbtrace.vcxproj.filters
   A builds/win32/msvc12/fbtracemgr.vcxproj
   A builds/win32/msvc12/fbtracemgr.vcxproj.filters
   A builds/win32/msvc12/fbudf.vcxproj
   A builds/win32/msvc12/fbudf.vcxproj.filters
   A builds/win32/msvc12/firebird2.props
   A builds/win32/msvc12/firebird2debug.props
   A builds/win32/msvc12/firebird2release.props
   A builds/win32/msvc12/gbak.vcxproj
   A builds/win32/msvc12/gbak.vcxproj.filters